// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Pure component with 2 notifications match expected snapshot 1`] = `
<NotificationPure
  notifications={
    Array [
      Object {
        "autoDismiss": 5,
        "level": "info",
        "message": "message",
        "title": "title",
        "uid": 1,
      },
      Object {
        "autoDismiss": 5,
        "level": "warning",
        "message": "message",
        "title": "title",
        "uid": 2,
      },
    ]
  }
  removeNotification={[Function]}
>
  <Component
    allowHTML={false}
    noAnimation={false}
    style={Object {}}
  >
    <div
      className="notifications-wrapper"
      style={Object {}}
    />
  </Component>
</NotificationPure>
`;

exports[`Notification Pure component without notifications match expected snapshot 1`] = `
<NotificationPure
  notifications={Array []}
  removeNotification={[Function]}
>
  <Component
    allowHTML={false}
    noAnimation={false}
    style={Object {}}
  >
    <div
      className="notifications-wrapper"
      style={Object {}}
    />
  </Component>
</NotificationPure>
`;
